--- a/style.css
+++ b/style.css
@@ -17,15 +17,16 @@ body {
 }
 .mb3{
     background-color: #e5e7eb;
-    padding: 0 400px;
+    padding: 100px 550px;
 }
 .mb4{
     background-color: white;
-    padding: 0 400px;
+    padding: 100px 400px;
 }
 .mb5{
     background-color: #1f2937;
     padding: 0 400px;
+    margin: 0;
 }
 .header{
     display: flex;
@@ -83,6 +84,7 @@ button.signup {
     border-radius: 12px;
     font-size: 16px;
     padding: 6px 24px;
+    border: 2px solid #1f2937;
 }
 .mb2 h1{
     flex-grow: 1;
@@ -95,7 +97,6 @@ button.signup {
     height: 400px;
     width: 800px;
     justify-content: center;
-    
 }
 .illustration_images img{
     height: 168px;
@@ -103,10 +104,27 @@ button.signup {
     border: 3px solid #3882f6;
     border-radius: 10%;
 }
+.mb4>div{
+    display: flex;
+    background-color: #3882f6;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 100px;
+    border-radius: 1%;
+}
+.mb4 h1,h2 {
+    margin: 0 0;
+    color: white;
+}
+.mb4 button {
+    border: 2px solid white;
+    margin: 0;
+}
 
-.copyright{
+.mb5 h1{
     text-align: center;
     color: #f9faf8;
     font-size: 18px;
     padding: 18px;
+    margin: 0;
 }
